
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* malloc (int) ;
 char** realloc (char**,int) ;
 int strlen (char*) ;
 int strncpy (char*,char*,int) ;

char **generate_array(char *list, char separator, int *length) {
   char **data = ((void*)0);
   int i = 0;
   int start = 0;
   int j = 1;

   if (list) {
      for (i = 0; i <= strlen(list); i++) {
         if (list[i] == separator ||
             i == strlen(list)) {
            data = realloc(data, (j + 1) * (sizeof(char*)));
            if (data) {
               data[j - 1] = malloc(i - start + 1);
               if (data[j - 1]) {
                  strncpy(data[j - 1], list + start, i - start);
                  data[j - 1][i - start + 1] = 0;
               }
               data[j] = ((void*)0);
            }
            start = i + 1;
            j++;
         }
      }
      *length = j;
   }

   return data;
}
